# monad-markov

./: .gitignore  ChangeLog.md  LICENSE  README.md  monad-markov.cabal  stack-lts-1.15.yaml  stack.yaml
example/: README.md  monad-markov-example.cabal  stack.yaml
example/src/: Main.hs
src/Control/Monad/: Markov.hs
src/Control/Monad/Markov/: Class.hs  Internal.hs
