name:           monad-markov-example
version:        0.1.0.0
synopsis:       Generate random words based on bigram frequencies from text.
description:    Sample code illustrating use of monad-markov.
                .
                Reads bigram frequencies from /usr/share/dict/words, and uses
                this to generate random words.
build-type:     Simple
cabal-version:  >= 1.10

executable example
  main-is: Main.hs
  hs-source-dirs:
      src
  build-depends:
      base >=4.0 && <5
    , containers
    , monad-markov
  default-language: Haskell2010
